<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dicoding.gloo.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_data"
        android:name="com.dicoding.gloo.ui.data.DataFragment"
        android:label="@string/title_data"
        tools:layout="@layout/fragment_data" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.dicoding.gloo.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.dicoding.gloo.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <activity
        android:id="@+id/navigation_gloocam"
        android:name="com.dicoding.gloo.ui.gloocam.GloocamActivity"
        android:label="activity_gloocam"
        tools:layout="@layout/activity_gloocam" />
</navigation>