<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Header -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Profilku"
            android:textColor="#000000"
            android:textSize="18sp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginBottom="16dp" />

        <!-- Profile Info Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/ic_profile_test"
                android:layout_marginEnd="12dp"
                android:background="@drawable/circle_background"
                android:contentDescription="Profile Picture" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Fernando Manuel"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="fernandomanuel@gmail.com"
                    android:textColor="#757575"
                    android:textSize="14sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_edit_profile_pencil"
                android:scaleType="centerInside"
                android:background="@drawable/card_background_button_blue"/>
        </LinearLayout>

        <!-- Divider -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E0E0E0" />

        <!-- Metrics Section -->
        <LinearLayout
            android:id="@+id/preferenceMetrics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="L"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Jenis Kelamin"
                    android:textColor="#757575"
                    android:textSize="14sp" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#E0E0E0" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="170"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tinggi Badan"
                    android:textColor="#757575"
                    android:textSize="14sp" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#E0E0E0" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="60"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Berat Badan"
                    android:textColor="#757575"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <!-- Health Metrics Cards -->
        <LinearLayout
            android:id="@+id/healthMetrics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:layout_margin="16dp"
            android:gravity="center">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:background="@drawable/card_background"
                android:padding="16dp"
                android:layout_marginEnd="8dp"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/bmiIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:contentDescription="@string/desc_test"
                        android:src="@drawable/ic_imt"
                        android:scaleType="centerCrop" />

                    <TextView
                        android:id="@+id/bmiText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/imt_test"
                        android:textSize="18sp"
                        android:textColor="@color/gray_800"
                        android:fontFamily="@font/inter_bold"
                        android:layout_marginStart="8dp" />

                    <ImageView
                        android:id="@+id/editBmi"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="@string/desc_test"
                        android:src="@drawable/ic_edit_pencil"
                        android:scaleType="centerCrop" />
                </LinearLayout>

                <TextView
                    android:id="@+id/bmiValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="24.1 kg/m2"
                    android:textSize="24sp"
                    android:textColor="@color/gray_800"
                    android:fontFamily="@font/inter_bold"
                    android:layout_marginTop="8dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/normalIcon"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:contentDescription="@string/desc_test"
                        android:src="@drawable/ic_normal"
                        android:scaleType="centerCrop"/>

                    <TextView
                        android:id="@+id/idealBmi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="0dp"
                        android:fontFamily="@font/inter_bold"
                        android:text="Berat Badan Ideal"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Baru saja diperbarui"
                    android:textSize="12sp"
                    android:textColor="@color/gray_500"
                    android:fontFamily="@font/inter_regular"
                    android:layout_marginTop="8dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:background="@drawable/card_background"
                android:padding="16dp"
                android:layout_marginStart="8dp"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/bloodPressureIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:contentDescription="@string/desc_test"
                        android:src="@drawable/ic_blood"
                        android:scaleType="centerCrop"/>

                    <TextView
                        android:id="@+id/bloodPressureText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/darah_test"
                        android:textSize="18sp"
                        android:textColor="@color/gray_800"
                        android:fontFamily="@font/inter_bold"
                        android:layout_marginStart="8dp"/>

                    <ImageView
                        android:id="@+id/editBloodPressure"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="@string/desc_test"
                        android:src="@drawable/ic_edit_pencil"
                        android:scaleType="centerCrop" />
                </LinearLayout>

                <TextView
                    android:id="@+id/bloodPressureValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="120 mmHg"
                    android:textSize="24sp"
                    android:textColor="@color/gray_800"
                    android:fontFamily="@font/inter_bold"
                    android:layout_marginTop="8dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/normalBloodIcon"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:contentDescription="@string/desc_test"
                        android:src="@drawable/ic_normal"
                        android:scaleType="centerCrop"/>

                    <TextView
                        android:id="@+id/bloodPressureiBmi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="0dp"
                        android:fontFamily="@font/inter_bold"
                        android:text="Normal"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/noBloodPressureData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Baru aja diperbarui"
                    android:textSize="12sp"
                    android:textColor="@color/gray_500"
                    android:fontFamily="@font/inter_regular"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>
        </LinearLayout>

        <!-- Other Menu -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp">

            <!-- Repeat these blocks for each menu item -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_my_profile"
                    android:scaleType="center"
                    android:background="@drawable/card_background_button_lavender_circle"
                    android:layout_marginEnd="12dp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Akun saya"
                        android:textColor="@color/gray_800"
                        android:textStyle="bold"
                        android:layout_marginBottom="4dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Buat perubahan pada akun Anda"
                        android:textColor="#757575" />
                </LinearLayout>

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/ic_arrow_right"
                    android:contentDescription="Chevron Icon" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
